--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
       <div class="sidebar" :class="{ 'full-height': menuVisible }">
   <div class="top-container" data-aos="fade-right">
     <div class="top-header-container">
-      <a class="site-title-container" href="https://letjs.dev">
-        <img src="https://letjs.dev/images/avatar.png?v=1568948177739" class="site-logo">
+      <a class="site-title-container" href="https://webszy.github.io/">
+        <img src="./images/avatar.png?v=1568948177739" class="site-logo">
         <h1 class="site-title">Let&#39;s Javascript</h1>
       </a>
       <div class="menu-btn" @click="menuVisible = !menuVisible">
